2017-01-12 Werner S Freund
	* Protect against wrong type setup on cluster manager setup
	* Tagging RingerCore-01-00-02.

2017-01-12 Werner S Freund
	* Improved Configured class to detect auto-configuration issues;
	* Handle argparse inexact argument matching for cluster-manager option;
	* Added ncpus configuration to local cluster jobs;
	* Logger instances now redirects message displaying methods to  the _logger
	Attribute.
	* Tagging RingerCore-01-00-01.

2017-01-08 Werner S Freund
	* Final arrangaments before going to release.
	* Tagging RingerCore-01-00-00

2017-01-07 Werner S Freund
	* python/FileIO.py, python/LimitedTypeList.py, python/LoopingBounds.py,
	python/util.py: Small import fixes
	* Added master logging level control with mutting capabilities.
	* Added global cluster-manager control.

2017-01-06 Werner S Freund
	* util.py: Moved traverse and related objects to LoopingBounds.py,
	also moved EnumStringification to Configure.py as it is commonly used
	for configuration.
	* Configure.py: Created a based class which can be used together with 
	EnumStringification to generate a Singleton (through the Holder class) that
	can be retrieved and mantain a unique flow over the different modules.
	* __init__.py: Added version to file.
	* util.py: Added method which dynamically returns the git description
	of the module state.

2017-01-04 Werner S Freund
	* Improved argparse interaction with the utilities that RingerCore provides 
	through the module ParsingUtils.py. The special cases are the
	EnumStringification and the Logger classes, which now can automatically
	detect those special cases.
	* Also added a ClusterManager tool, which can be used to specify which
	cluster manager is to be used.
	* parsers/LocalCluster.py: new module with a parser for local clusters managers,
	such as LSF and Torque/PBS.